# coax

./: .gitignore  Cargo.toml  README.md
coax-actor/: Cargo.toml
coax-actor/src/: actor.rs  config.rs  error.rs  lib.rs  pkg.rs
coax-api/: Cargo.toml
coax-api-proto/: Cargo.toml
coax-api-proto/src/: builder.rs  lib.rs  messages.rs
coax-api/src/: client.rs  conv.rs  events.rs  lib.rs  macros.rs  message.rs  prekeys.rs  token.rs  types.rs  user.rs  util.rs
coax-client/: Cargo.toml
coax-client/src/: client.rs  error.rs  lib.rs  listen.rs
coax-data/: Cargo.toml
coax-data/src/: db.rs  error.rs  lib.rs  model.rs  schema.rs  util.rs
coax-data/src/migrations/: mod.rs
coax-data/src/migrations/convstatus/: down.sql  up.sql
coax-data/src/migrations/mime/: down.sql  up.sql
coax-data/src/migrations/msgasset/: down.sql  up.sql
coax-data/src/migrations/msguserid/: down.sql  up.sql
coax-data/src/profiles/: mod.rs  model.rs  schema.rs
coax-gtk/: Cargo.toml  Makefile  build.rs
coax-gtk/src/: channel.rs  coax.rs  contact.rs  error.rs  ffi.rs  main.rs  poll.rs  profile.rs  res.rs  signals.rs  util.rs
coax-gtk/src/gtk/: app-menu.ui  button-menu.ui  coax.desktop  header.ui  main.ui  new-conversation.ui  open-account.ui  resources.c  resources.gresource.xml  style.css
coax-net/: Cargo.toml
coax-net/src/: buf.rs  lib.rs  rpc.rs  tee.rs
coax-net/src/http/: header.rs  mod.rs  tls.rs  transfer.rs
coax-ws/: Cargo.toml
coax-ws/src/: frame.rs  io.rs  lib.rs
signals/: Cargo.toml
signals/src/: lib.rs
