[package]
name        = "coax-api-proto"
version     = "0.1.0"
authors     = ["Wire Swiss GmbH <support@wire.com>"]
license     = "GPL-3.0"
readme      = "README.md"
repository  = "https://github.com/wireapp/coax"
homepage    = "https://github.com/wireapp/coax"
description = "Wire message type definition (protocol buffers)"

[dependencies]
protobuf = ">= 1.0"
uuid     = { version = ">= 0.3", features = ["v4", "v5"] }
