[package]
name        = "coax-api"
version     = "0.1.0"
authors     = ["Wire Swiss GmbH <support@wire.com>"]
license     = "GPL-3.0"
readme      = "README.md"
repository  = "https://github.com/wireapp/coax"
homepage    = "https://github.com/wireapp/coax"
description = "Wire API type definitions"

[dependencies]
chrono          = ">= 0.2"
coax-api-proto  = { path = "../coax-api-proto" }
cookie          = { git = "https://github.com/alexcrichton/cookie-rs.git", default-features = false }
cryptobox       = { git = "https://github.com/wireapp/cryptobox.git", branch = "reshuffle2" }
json-codec      = ">= 0.4"
proteus         = { git = "https://github.com/wireapp/proteus.git", branch = "develop" }
protobuf        = ">= 1.0"
openssl         = ">= 0.9"
quick-error     = ">= 1.1"
rustc-serialize = ">= 0.3"
url             = ">= 1.1"
uuid            = { version = ">= 0.3", features = ["v4", "v5"] }
