[package]
name        = "coax-client"
version     = "0.1.0"
authors     = ["Wire Swiss GmbH <support@wire.com>"]
license     = "GPL-3.0"
readme      = "README.md"
repository  = "https://github.com/wireapp/coax"
homepage    = "https://github.com/wireapp/coax"
description = "Wire API client"

[dependencies]
coax-api    = { path = "../coax-api" }
coax-net    = { path = "../coax-net" }
coax-ws     = { path = "../coax-ws" }
cookie      = { git = "https://github.com/alexcrichton/cookie-rs.git", default-features = false }
cryptobox   = { git = "https://github.com/wireapp/cryptobox.git", branch = "reshuffle2" }
json-codec  = ">= 0.4"
slog        = ">= 1.0"
openssl     = ">= 0.9"
url         = ">= 1.1"

