[package]
name        = "coax-client"
version     = "0.1.0"
authors     = ["Wire Swiss GmbH <support@wire.com>"]
license     = "GPL-3.0"
readme      = "README.md"
repository  = "https://github.com/wireapp/coax"
homepage    = "https://github.com/wireapp/coax"
description = "Wire API client"

[dependencies]
bytes       = ">= 0.4"
coax-api    = { path = "../coax-api" }
cryptobox   = { git = "https://github.com/wireapp/cryptobox.git", branch = "reshuffle2" }
futures     = { version = ">= 0.1.14", features = ["use_std"] }
hyper       = ">= 0.11"
hyper-tls   = ">= 0.1"
json-codec  = ">= 0.4"
native-tls  = ">= 0.1"
slog        = ">= 2.0"
tokio-core  = ">= 0.1"
url         = ">= 1.1"
websocket   = ">= 0.20"

