[package]
name        = "coax-data"
version     = "0.1.0"
authors     = ["Wire Swiss GmbH <support@wire.com>"]
license     = "GPL-3.0"
readme      = "README.md"
repository  = "https://github.com/wireapp/coax"
homepage    = "https://github.com/wireapp/coax"
description = "Storage layer for coax client"

[dependencies]
chrono          = ">= 0.2"
coax-api        = { path = "../coax-api" }
coax-api-proto  = { path = "../coax-api-proto" }
diesel          = { version = ">= 0.11", default-features = false, features = ["sqlite"] }
diesel_codegen  = { version = ">= 0.11", default-features = false, features = ["sqlite"] }
quick-error     = ">= 1.1"
slog            = ">= 1.0"

[dev-dependencies]
slog-term = ">= 0.5"
