[package]
name        = "coax-gtk"
version     = "0.1.0"
authors     = ["Wire Swiss GmbH <support@wire.com>"]
license     = "GPL-3.0"
readme      = "README.md"
repository  = "https://github.com/wireapp/coax"
homepage    = "https://github.com/wireapp/coax"
description = "Wire client (GTK+ version)"
build       = "build.rs"

[build-dependencies]
gcc        = ">= 0.3"
pkg-config = ">= 0.3"

[features]
prod = ["coax-actor/prod"]

[dependencies]
chashmap           = ">= 2.2"
chrono             = ">= 0.2"
clap               = ">= 2.0"
coax-actor         = { path = "../coax-actor" }
coax-api           = { path = "../coax-api" }
coax-api-proto     = { path = "../coax-api-proto" }
coax-client        = { path = "../coax-client" }
coax-data          = { path = "../coax-data" }
coax-net           = { path = "../coax-net" }
cookie             = ">= 0.6.1"
cryptobox          = { git = "https://github.com/wireapp/cryptobox.git", branch = "reshuffle2" }
fnv                = ">= 1.0"
futures            = { version = ">= 0.1", features = ["use_std"] }
futures-cpupool    = ">= 0.1"
gdk                = ">= 0.5.3"
gdk-pixbuf         = ">= 0.1.3"
gio                = ">= 0.1.3"
glib               = ">= 0.1.3"
glib-sys           = ">= 0.3.4"
gobject-sys        = ">= 0.3.4"
gtk                = { version = ">= 0.1.3", features = ["v3_16"] }
gtk-sys            = ">= 0.3.4"
json-codec         = ">= 0.4"
lazy_static        = ">= 0.2"
libc               = ">= 0.2"
mime               = { version = ">= 0.2", default-features = false }
notify-rust        = ">= 3.3"
openssl            = ">= 0.9"
quick-error        = ">= 1.1"
pango              = ">= 0.1.3"
proteus            = { git = "https://github.com/wireapp/proteus.git", branch = "develop" }
rand               = ">= 0.3"
slog               = { version = ">= 2.0", features = ["std", "max_level_debug" ] }
slog-async         = ">= 2.0"
slog-term          = ">= 2.0"
url                = ">= 1.1"
