[package]
name        = "coax-gtk"
version     = "0.1.0"
authors     = ["Wire Swiss GmbH <support@wire.com>"]
license     = "GPL-3.0"
readme      = "README.md"
repository  = "https://github.com/wireapp/coax"
homepage    = "https://github.com/wireapp/coax"
description = "Wire client (GTK+ version)"
build       = "build.rs"

[build-dependencies]
gcc        = ">= 0.3.52"
pkg-config = ">= 0.3"

[features]
prod = ["coax-actor/prod"]

[dependencies]
chashmap           = ">= 2.2"
chrono             = ">= 0.4"
clap               = ">= 2.0"
coax-actor         = { path = "../coax-actor" }
coax-api           = { path = "../coax-api" }
coax-api-proto     = { path = "../coax-api-proto" }
coax-client        = { path = "../coax-client" }
coax-data          = { path = "../coax-data" }
coax-net           = { path = "../coax-net" }
fnv                = ">= 1.0"
futures            = { version = ">= 0.1.14", features = ["use_std"] }
futures-cpupool    = ">= 0.1"
gdk                = ">= 0.6"
gdk-pixbuf         = ">= 0.2"
gio                = ">= 0.2"
glib               = ">= 0.3"
glib-sys           = ">= 0.4"
gobject-sys        = ">= 0.4"
gtk                = { version = ">= 0.2", features = ["v3_16"] }
gtk-sys            = ">= 0.4"
lazy_static        = ">= 0.2"
libc               = ">= 0.2"
mime               = { version = ">= 0.3", default-features = false }
notify-rust        = ">= 3.3"
openssl            = ">= 0.9"
quick-error        = ">= 1.1"
pango              = ">= 0.2"
slog               = { version = ">= 2.0", features = ["std", "max_level_debug" ] }
slog-async         = ">= 2.0"
slog-term          = ">= 2.0"
