[package]
name        = "coax-net"
version     = "0.1.0"
authors     = ["Wire Swiss GmbH <support@wire.com>"]
license     = "GPL-3.0"
readme      = "README.md"
repository  = "https://github.com/wireapp/coax"
homepage    = "https://github.com/wireapp/coax"
description = "TLS networking and HTTP support."

[dependencies]
cookie      = ">= 0.6.1"
flate2      = ">= 0.2"
httparse    = ">= 1.1"
json-codec  = ">= 0.4"
slog        = ">= 2.0"
openssl     = ">= 0.9"
quick-error = ">= 1.1"
unicase     = ">= 1.4"
url         = ">= 1.1"

[dev-dependencies]
quickcheck = ">= 0.3"

